Investigated the huge number of invalid queries and it turns out, that query.wikidata automatically adds some prefixes to theire queries which we don't do. Implemented this and fixed some minor issues when parsing URL's.